# yacfks

./: .gitignore  LICENSE  README.md  pyproject.toml
yacfks/app/: main.py
yacfks/app/battle/: README.md  army_utils.py  battle_engine.py  battle_line_state.py  battle_result.py  battle_setup.py  battle_snapshot.py  battle_state.py  phase_context.py  status_effect.py
yacfks/app/battle/damage/: damage_calc.py
yacfks/app/battle/skills/: SKILLS_FRAMEWORK.md  conditions.py  definitions.py  effect_collection.py  enums.py  skill_context.py  skill_engine.py  statuses.py
yacfks/app/battle/skills/handlers/: base_handler.py
yacfks/app/domains/: army.py  army_config.py  enums.py  hero.py  skills.py  stats.py  troop.py  widget.py
yacfks/app/repos/: hero_repo.py  troop_repo.py  widget_repo.py
yacfks/app/services/: army_utils.py  bonus_resolver.py  formulas.py  stat_calculator.py
yacfks/tests/: helpers.py  test_army.py  test_army_config.py  test_army_utils.py  test_battle_engine.py  test_battle_scenarios.py  test_battle_setup.py  test_bonus_resolver.py  test_damage_calc.py  test_formulas.py  test_skill_engine.py  test_widgets.py
